# so-arm-moveit-hardware

./: .gitignore  CLEANUP_SUMMARY.md  MOVEIT_HARDWARE_GUIDE.md  PROJECT_ARCHITECTURE.md  QUICK_START_NEXT.md  README.md  SO_ARM_COMMANDER_DESIGN.md  fix_servo.cpp
src/.claude/: settings.local.json
src/so_arm_bringup/: CMakeLists.txt  package.xml
src/so_arm_bringup/config/: hardware_view.rviz  ros2_controllers.yaml  so_arm_moveit.rviz
src/so_arm_bringup/launch/: so_arm_hardware.launch.py  so_arm_moveit_hardware.launch.py
src/so_arm_commander_cpp/: BUILD_COMPLETE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  package.xml
src/so_arm_commander_cpp/config/: name_poses.yaml
src/so_arm_commander_cpp/examples/: basic_motion_example.cpp  named_poses_example.cpp  pick_place_example.cpp
src/so_arm_commander_cpp/include/so_arm_commander_cpp/: so_arm_commander.hpp
src/so_arm_commander_cpp/src/: so_arm_commander.cpp  so_arm_commander.cpp.orig
src/so_arm_description/: CMakeLists.txt
src/so_arm_description/launch/: display.launch.py
src/so_arm_description/rviz/: urdf_config.rviz
src/so_arm_description/urdf/: so101.ros2_control.hardware.xacro  so101.ros2_control.xacro  so101.urdf.xacro  so101_new_calib.urdf
src/so_arm_hardware/: CMakeLists.txt  README.md  package.xml  so_arm_hardware_plugin.xml
src/so_arm_hardware/config/: hardware_params.yaml
src/so_arm_hardware/include/so_arm_hardware/: STSServo.h  so_arm_hardware_interface.hpp
src/so_arm_hardware/src/: STSServo.cpp  so_arm_hardware_interface.cpp
src/so_arm_interfaces/: CMakeLists.txt  package.xml
src/so_arm_moveit_config/: .setup_assistant  package.xml
src/so_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  so101.ros2_control.xacro  so101.srdf  so101.urdf.xacro
src/so_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/so_arm_tasks/: CMakeLists.txt  package.xml
src/so_arm_tasks/include/so_arm_tasks/: task_manager.hpp
src/so_arm_tasks/src/: task_examples.cpp  task_manager.cpp
