<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so_arm_commander_cpp</name>
  <version>1.0.0</version>
  <description>High-level C++ control interface for SO-ARM robotic arm using MoveIt 2</description>
  <maintainer email="holms@example.com">holms</maintainer>
  <license>Apache-2.0</license>

  <author email="holms@example.com">holms</author>

  <url type="repository">https://github.com/holmsslk/so-arm-moveit-hardware</url>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <!-- MoveIt dependencies -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>

  <!-- Message dependencies -->
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
